[workspace]
members = ["envman", "envman_derive", "envman_derive_internals"]
resolver = "2"

[workspace.package]
version = "0.4.2"
edition = "2021"
rust-version = "1.56"
description = "This crate adds a macro for easy management of environment variables."
authors = ["Moriyoshi Kasuga <moriyoshi.kasuga1218@gmail.com>"]
repository = "https://github.com/moriyoshi-kasuga/envman"
license = "MIT"
readme = "README.md"
categories = ["config"]
keywords = ["environment", "env", "settings", "config", "management"]

[workspace.dependencies]
syn = { version = "2.0", default-features = false }
