[package]
name = "envman"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Rust crates to manage virtual environments"
authors.workspace = true
repository.workspace = true
license.workspace = true
readme = "../README.md"
categories.workspace = true
keywords.workspace = true

[lib]

[features]
default = ["derive"]
derive = ["dep:envman_derive"]

[dependencies]
envman_derive = { version = "0.3.1", path = "../envman_derive", optional = true }
thiserror = "^1.0"
