[package]
name = "envman_derive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Macros to manage virtual environments"
authors.workspace = true
repository.workspace = true
license.workspace = true
readme = "../README.md"
categories.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[dependencies]
envman_derive_internals = { version = "^0.3", path = "../envman_derive_internals" }
syn = { version = "2.0.52", default-features = false, features = [
    "parsing",
    "proc-macro",
] }
