[package]
name = "envman_derive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Macros to manage environment variables."
authors.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[dependencies]
envman_derive_internals = { version = "^2", path = "../envman_derive_internals" }

syn = { workspace = true, default-features = false, features = [
    "parsing",
    "proc-macro",
] }

[dev-dependencies]
envman = { version = "^2", path = "../envman" }
envman_derive = { version = "^2", path = "../envman_derive" }
