[package]
name = "envman_derive_internals"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "derive macro implementation for envman crate"
authors.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, default-features = true }
convert_case = "0.7.1"

[lints]
workspace = true
