[package]
name = "envman_test"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Test utilities for envman."
authors.workspace = true
repository.workspace = true
license.workspace = true
readme = "../README.md"
categories.workspace = true
keywords.workspace = true

[dependencies]
envman = { version = "^0", path = "../envman" }
